2003-12-16  Christian Neumair  <chris@gnome-de.org>

	* data/glade/add-predecessor.glade:
	* data/glade/calendar-dialog.glade:
	* data/glade/group-dialog.glade:
	* data/glade/html-output.glade:
	* data/glade/new-property.glade:
	* data/glade/project-properties.glade:
	* data/glade/property-dialog.glade:
	* data/glade/resource-dialog.glade:
	* data/glade/resource-input-dialog.glade:
	* data/glade/sql.glade:
	* data/glade/task-dialog.glade:
	* data/glade/task-input-dialog.glade: Some HIGification/usability work.

2003-12-16  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c:
	(task_tree_add_column): Set userdata. Fixes printing.

2003-12-16  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: 
	* src/planner-project-properties.c:
	* src/planner-task-tree.c:
	* src/planner-cmd-manager.c: More undo work.
	
	* data/ui/task-view.ui:
	* src/planner-task-view.c:
	* src/planner-gantt-view.c: Add critical task highlighting for the
	task view.

2003-12-15  Richard Hult  <richard@imendio.com>

	* src/planner-cmd-manager.c (planner_cmd_manager_insert_and_do):
	Trim the history if it's too long.

	* src/planner-html-plugin.c (html_plugin_ok_button_clicked): Fix
	bug #129375.

	* src/planner-cmd-manager.c: More work.

	* src/planner-task-tree.c: (task_cmd_insert_do),
	(task_cmd_insert),
	(planner_task_tree_insert_task): 
	(planner_task_tree_insert_subtask): Start editing for newly
	inserted tasks.
	
	* src/planner-window.c: (window_finalize): Unref the cmd manager.

2003-12-14  Richard Hult  <richard@imendio.com>

	* configure.in:
	* docs/libplanner/Makefile.am: Clean up flags even more, and fix
	bug #129321.

2003-12-14  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-object.[ch]
	* libplanner/mrp-private.h:
	* libplanner/mrp-project.c: Work in progress.

2003-12-14  Cédric Delfosse <cdelfosse@free.fr>

	* src/planner-print-dialog.c:
	(load_planner_print_config_from_file),
	(save_planner_print_config_to_file):